--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "astro-docs",
-  "version": "1.0.0",
   "type": "module",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview"
   },
-  "devDependencies": {
-    "@tailwindcss/vite": "^4.1.17",
-    "tailwindcss": "^4.1.17",
-    "vite": "^7.2.4"
+  "dependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.16.0",
+    "tailwindcss": "^3.4.18"
   }
 }
